--- a/Remote/en/commonHeader.htm
+++ b/Remote/en/commonHeader.htm
@@ -21,6 +21,7 @@
 			#logout	{position:absolute;right:2em;top:0;margin:0;padding:0;font-size:8pt;}
 			#logout a{ display:block; padding: 0 1em 0.2em 1em; color: #00f;background:#ccc;border-bottom:1px solid #000;border-left:1px solid #000;border-right:1px solid #000;text-decoration:none;}
 			#logout a:hover	{background:#fff;text-decoration:underline;}
+			#frame{border-top:1px solid #000;padding: 20px 5px 0px 5px;}
 		</style>
 		
 	</head>
