Replace references to shareaza.com for point to sourceforge
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@5959 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Res/About.htm
+++ b/shareaza/Res/About.htm
@@ -88,7 +88,7 @@ table.nodeinfo tr td {
 <div align="center"><br />
   <table width="800" border="0" cellspacing="4" cellpadding="6"> <!-- NODE BOX START-->
 	<tr align="center" bgcolor="#999999">
-	  <td colspan="2" bgcolor="#CCCCCC" class="solidborder blacktext">This node is powered by <a href="http://www.shareaza.com/download/" target="_top"><strong>Shareaza <% Version %></strong></a></td>
+	  <td colspan="2" bgcolor="#CCCCCC" class="solidborder blacktext">This node is powered by <a href="http://shareaza.sourceforge.net/?id=download" target="_top"><strong>Shareaza <% Version %></strong></a></td>
 	</tr>
 	<tr>
 	  <td width="50%" align="center" valign="top" class="solidborder"><a href="gnutella:browse:<% ListenIP %>"><strong>Browse Node</strong></a> In Shareaza</td>
@@ -133,8 +133,8 @@ table.nodeinfo tr td {
 	<tr>
 	  <td valign="top">
 	  <ul>
-		  <li class="text1"><a href="http://www.shareaza.com/" target="_top">Visit the Shareaza Homepage</a> </li>
-		  <li class="text1"><a href="http://www.shareaza.com/download/" target="_top">Check out the latest Shareaza Release</a></li>
+		  <li class="text1"><a href="http://shareaza.sourceforge.net/" target="_top">Visit the Shareaza Homepage</a> </li>
+		  <li class="text1"><a href="http://shareaza.sourceforge.net/?id=download" target="_top">Check out the latest Shareaza Release</a></li>
 	  </ul>	 </td>
 	</tr>
   </table>
