--- a/shareaza/Res/Browser.htm
+++ b/shareaza/Res/Browser.htm
@@ -10,8 +10,8 @@
 
 <tr height="48">
 <td bgcolor="#BE0000" align="left" valign="center" style="border-style: solid; border-width: 0px 0px 1px 0px; border-color: black;">
-	<a href="http://www.shareaza.com/">
-	<img src="http://www.shareaza.com/images/barlogo.gif" width="240" height="48" border="0" align="absmiddle"></a>
+	<a href="http://shareaza.sourceforge.net/">
+	<img src="http://shareaza.sourceforge.net/images/barlogo.gif" width="240" height="48" border="0" align="absmiddle"></a>
 	<font face="Verdana" color="yellow"><b>Please Share</b></font>
 </td>
 </tr>
@@ -50,9 +50,9 @@ a commercial version.
 </p>
 
 <font size="1">
-<a href="http://www.shareaza.com/download/">
-<img src="http://www.shareaza.com/images/iconshadowed.gif" width="42" height="50" align="absmiddle" hspace="5" border="0"></a>
-<a href="http://www.shareaza.com/download/">Download now at Shareaza.com</a>
+<a href="http://shareaza.sourceforge.net/?id=download">
+<img src="http://shareaza.sourceforge.net/images/iconshadowed.gif" width="42" height="50" align="absmiddle" hspace="5" border="0"></a>
+<a href="http://shareaza.sourceforge.net/?id=download">Download now at the Shareaza web site</a>
 </font>
 
 <br><br>
