--- a/Remote/lt/networkHeader.htm
+++ b/Remote/lt/networkHeader.htm
@@ -1,25 +1,17 @@
-                <table width="95%" align="center" cellspacing="0" cellpadding="0">
-                       <tr>
-                               <td align="center">
-                                       <table width="100%" cellspacing="0">
-                                               <tr>
-                                                       <td class="tabedg">&nbsp;</td>
-                                                       <td class="tab"><a class="tab" href="Home">Pradžia</a></td>
-                                                       <td class="tabfil">&nbsp;</td>
-                                                       <td class="tab"><a class="tab" href="search">Paieška</a></td>
-                                                       <td class="tabfil">&nbsp;</td>
-                                                       <td class="tab"><a class="tab" href="downloads">Atsisiuntimai</a></td>
-                                                       <td class="tabfil">&nbsp;</td>
-                                                       <td class="tab"><a class="tab" href="uploads">Išsiuntimai</a></td>
-                                                       <td class="tabfil">&nbsp;</td>
-                                                       <td class="tabsel">Tinklai</td>
-                                                       <td class="tabedg">&nbsp;</td>
-                                               </tr>
-                                       </table>
-                               </td>
-                       </tr>
-                       <tr>
-                               <td class="frame">
-					<p align="right" style="font-size: 7pt">
+<!-- networkHeader -->
+		<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="inactive"><a href="home" class="noline">Pradžia</a></li>
+				<li class="inactive"><a href="search" class="noline">Paieška</a></li>
+				<li class="inactive"><a href="downloads" class="noline">Atsisiuntimai</a></li>
+				<li class="inactive"><a href="uploads" class="noline">Išsiuntimai</a></li>
+				<li class="active"><a href="network" class="noline">Tinklai</a></li>
+			</ul>
+		</div>
+		<!-- /tabs -->
+			<div id="frame">
+			<div id="functions">
 						<a href="?refresh=<%= random %>">Atnaujinti pateiktį</a>
-					</p>
+			</div>
+<!-- /networkHeader -->
