--- a/Remote/lt/searchNew.htm
+++ b/Remote/lt/searchNew.htm
@@ -1,36 +1,21 @@
-<td class="tabsel">Nauja paieška</td>
-<td class="tabedg">&nbsp;</td>
-</tr> </table> </td> </tr>
-<tr>
-    <td class="frame">
-        <div>
-            Naujos paieškos vykdymui įrašykite ieškinį į žemiau esantį
-            laukelį ir paspauskite <b>Pradėti paiešką</b>.
-            Jei norite apriboti paiešką kokiu nors bylos tipu,
-            pasirinkite jį iš sąrašo.
-        </div>
-        <form method="get" action="newsearch">
-            <table align="center">
-                <tr>
-                    <td>Ko ieškoti:</td>
-                    <td><input type="text" name="search" size="30"></td>
-                </tr>
-                <tr>
-                    <td>Bylos tipas:</td>
-                    <td>
-                        <select name="schema">
-                            <option value="">Bet kokio tipo byla</option>
-                            <%= schema_option_list %>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-					<td></td>
-				</tr>
-				<tr>
-                    <td colspan="2" align="center">
-                        <input type="submit" value="Pradėti paiešką">
-					</td>
-				</tr>
-			</table>
+										<li class="active"><a class="noline" href="?id=0">Nauja paieška</a></li>
+								</ul>
+<div style="border: 1px #000 solid;padding: 5px;">
+			<p>Naujos paieškos vykdymui įrašykite ieškinį į žemiau esantį laukelį ir paspauskite <strong>Pradėti 
+				paiešką</strong>. Jei norite apriboti paiešką kokiu nors failo tipu, pasirinkite jį iš sąrašo (rekomenduojama).</p>
+
+	<div style="text-align:right; width: 30em;">		
+		<form method="get" action="newsearch">
+
+			<label>Ko ieškoti:</label>
+					<input type="text" name="search" class="regularinput" /><br />
+			<label>Failo tipas:</label>
+					
+						<select name="schema" class="regularinput">
+							<option value="">Bet kokio tipo</option>
+							<%= schema_option_list %>
+						</select>
+				<br />
+						<input type="submit" value="Pradėti paiešką">
 		</form>
+	</div>
