--- a/Remote/lt/downloadsFooter.htm
+++ b/Remote/lt/downloadsFooter.htm
@@ -1,14 +1,12 @@
-</td> </tr> </table>
+<!--downloadsFooter-->
 <br>
 <form method="get" action="newdownload" ID="Form1">
-    <table align="center">
-        <tr>
-            <td>Parsisiųsti <i>Magnet</i>:</td>
-            <td><input type="text" name="uri" size="50"></td>
-            <td>
-                <input type="submit" value="Pirmyn">
-            </td>
-        </tr>
-	</table>
+	<div>
+			<label>Magnet:</label>
+			<input type="text" name="uri" size="50" />
+			<input type="submit" value="Pirmyn" />
+	</div>
 </form>
-</td> </tr> </table>
+</div>
+</div>
+<!--/downloadsFooter-->
