--- a/Remote/lt/searchColumn.htm
+++ b/Remote/lt/searchColumn.htm
@@ -1,1 +1,3 @@
-										<td class="viewheader" align="<%= column_align %>"><a class="emblink" href="?id=<%= search_id %>&sort=<%= column_id %>"><%= column_caption %></a></td>
+<!--searchColumn -->
+										<th><a class="nolink" href="?id=<%= search_id %>&amp;sort=<%= column_id %>"><%= column_caption %></a></th>
+<!--/searchColumn-->
