--- a/Remote/lt/uploadsQueueStart.htm
+++ b/Remote/lt/uploadsQueueStart.htm
@@ -1,22 +1,25 @@
+<!-- uploadsQueueStart -->
 <%? !queue_expanded %>
-                                       <h4><a class="emblink" href="?queue_expand=<%= queue_id %>">+ <%= queue_caption %></a>
+					<h4><a class="noline" href="?queue_expand=<%= queue_id %>">+ <%= queue_caption %></a>
 <%? queue_transfers %>
-                                       <small>(<%= queue_transfers %> aktyvūs / <%= queue_queued %> eilėje, naudojama <%= queue_bandwidth %>)</small>
+					(<%= queue_transfers %> aktyvūs / <%= queue_queued %> eilėje, naudojama <%= queue_bandwidth %>)
 <%?%>
-                                       </h4>
+					</h4>
 <%?%><%? queue_expanded %>
-                                       <h4><a class="emblink" href="?queue_collapse=<%= queue_id %>">- <%= queue_caption %></a>
+					<h4><a class="noline" href="?queue_collapse=<%= queue_id %>">- <%= queue_caption %></a>
 <%? queue_transfers %>
-                                       <small>(<%= queue_transfers %> aktyvūs / <%= queue_queued %> eilėje, naudojama <%= queue_bandwidth %>)</small>
+					(<%= queue_transfers %> aktyvūs / <%= queue_queued %> eilėje, naudojama <%= queue_bandwidth %>)
 <%?%>
-                                       </h4>
-                                       <table width="100%" cellspacing="0" style="border-collapse: collapse;">
-                                               <tr>
-                                                       <td class="viewheader">Byla</td>
-                                                       <td class="viewheader">Vartotojas</td>
-                                                       <td class="viewheader" align="center">Dydis</td>
-                                                       <td class="viewheader" align="center">Sparta</td>
-                                                       <td class="viewheader">Vartotojo agentas</td>
-                                                       <td class="viewheader"></td>
-                                               </tr>
+					</h4>
+				<div class="centertable">
+					<table>
+						<tr>
+							<th>Failas</th>
+							<th>Naudotojas</th>
+							<th>Dydis</th>
+							<th>Sparta</th>
+							<th>Naudotojo agentas</th>
+							<th></th>
+						</tr>
 <%?%>
+<!-- /uploadsQueueStart -->
