--- a/Remote/ru/downloadsFooter.htm
+++ b/Remote/ru/downloadsFooter.htm
@@ -1,18 +1,12 @@
-							</td>
-						</tr>
-					</table>
-					<br>
-					<table align="center">
-						<form method="get" action="newdownload">
-							<tr>
-								<td>Загрузить Magnet:</td>
-								<td><input type="text" name="uri" size="50"></td>
-								<td>
-									<input type="submit" value="Вперёд">
-								</td>
-							</tr>
-						</form>
-					</table>
-				</td>
-			</tr>
-		</table>
+﻿<!--downloadsFooter-->
+<br>
+<form method="get" action="newdownload" ID="Form1">
+	<div>
+			<label>Загрузить Magnet:</label>
+			<input type="text" name="uri" size="50" />
+			<input type="submit" value="Вперёд" />
+	</div>
+</form>
+</div>
+</div>
+<!--/downloadsFooter-->
