--- a/Remote/ru/downloadsHeader.htm
+++ b/Remote/ru/downloadsHeader.htm
@@ -1,28 +1,15 @@
-		<table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tab"><a class="tab" href="Home">Домой</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="search">Поиск</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tabsel">Загрузки</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="uploads">Выгрузки</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="network">Сети</a></td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
-					<table width="100%" align="center" cellspacing="0" cellpadding="0" ID="Table1">
-						<tr>
-							<td align="center">
-								<table width="100%" cellspacing="0" ID="Table2">
-									<tr>
-										<td class="tabedg">&nbsp;</td>
+﻿<!-- downloadsHeader -->
+		<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="inactive"><a href="home" class="noline">Домой</a></li>
+				<li class="inactive"><a href="search" class="noline">Поиск</a></li>
+				<li class="active"><a href="downloads" class="noline">Загрузки</a></li>
+				<li class="inactive"><a href="uploads" class="noline">Выгрузки</a></li>
+				<li class="inactive"><a href="network" class="noline">Сети</a></li>
+			</ul>
+		</div>
+		<!-- /tabs -->
+			<div id="frame">
+				<ul class="tabs" style="text-align:left;">
+<!-- /downloadsHeader -->
