--- a/Remote/ru/downloadsTop.htm
+++ b/Remote/ru/downloadsTop.htm
@@ -1,45 +1,34 @@
-										<td class="tabedg">&nbsp;</td>
-									</tr>
-								</table>
-							</td>
-						</tr>
-						<tr>
-							<td class="frame">
-								<table width="100%">
-									<tr>
-										<form method="get">
-											<input type="hidden" name="filter_set" value="1">
-											<td nowrap style="font-size: 7pt"><b>Фильтр:</b></td>
-											<td/>
-											<td><input type="checkbox" id="filter_active" name="filter_active" value="1" <%= filter_active %>></td>
-											<td nowrap style="font-size: 7pt"><label for="filter_active">Актвные</label></td>
-											<td/>
-											<td><input type="checkbox" id="filter_queued" name="filter_queued" value="1" <%= filter_queued %>></td>
-											<td nowrap style="font-size: 7pt"><label for="filter_queued">В очереди</label></td>
-											<td/>
-											<td><input type="checkbox" id="filter_sources" name="filter_sources" value="1" <%= filter_sources %>></td>
-											<td nowrap style="font-size: 7pt"><label for="filter_sources">Без источников</label></td>
-											<td/>
-											<td><input type="checkbox" id="filter_paused" name="filter_paused" value="1" <%= filter_paused %>></td>
-											<td nowrap style="font-size: 7pt"><label for="filter_paused">Приостановленные</label></td>
-											<td/>
-											<td><input type="checkbox" id="filter_show_all" name="filter_show_all" value="1" <%= filter_show_all %>></td>
-											<td nowrap style="font-size: 7pt"><label for="filter_show_all">Показывать все источники</label></td>
-											<td/>
-											<td nowrap><input type="submit" value="Установить"></td>
-											<td width="100%"/>
-											<td nowrap align="right" style="font-size: 7pt"><a href="?refresh=<%= random %>">Обновить</a></td>
-										</form>
-									</tr>
-								</table>
-								<br>
-								<table width="100%" cellspacing="0" style="border-collapse: collapse">
-									<tr>
-										<td class="viewheader">Загружаемый файл</td>
-										<td class="viewheader" align="center">Размер</td>
-										<td class="viewheader" align="center">Прогресс</td>
-										<td class="viewheader" align="center">Скорость</td>
-										<td class="viewheader" align="center">Источники</td>
-										<td class="viewheader" align="center">Статус</td>
-										<td class="viewheader" align="center">Управление</td>
-									</tr>
+﻿
+<!-- downloadsTop-->
+</ul>
+<div  id="content">
+	<div id="functions"><a href="?refresh=<%= random %>">Обновить</a></div>
+		<div id="filters">	
+			<form method="get" action="" ID="Form1">
+						<input type="hidden" name="filter_set" value="1" ID="Hidden1">
+						<b>Фильтр:</b>
+						<input type="checkbox" id="filter_active" name="filter_active" value="1" <%= filter_active %>>
+						<label for="filter_active">Актвные</label>
+						<input type="checkbox" id="filter_queued" name="filter_queued" value="1" <%= filter_queued %>>
+						<label for="filter_queued">В очереди</label>
+						<input type="checkbox" id="filter_sources" name="filter_sources" value="1" <%= filter_sources %>>
+						<label for="filter_sources">Без источников</label>
+						<input type="checkbox" id="filter_paused" name="filter_paused" value="1" <%= filter_paused %>>
+						<label for="filter_paused">Приостановленные</label>
+						<input type="checkbox" id="filter_show_all" name="filter_show_all" value="1" <%= filter_show_all %>>
+						<label for="filter_show_all">Показывать все</label>
+						<input type="submit" value=" Установить "><br />
+			</form>
+		</div>
+		<br />
+<table>
+	<tr>
+				<th>Файл</th>
+				<th>Размер</th>
+				<th>Прогресс</th>
+				<th>Скорость</th>
+				<th>Источники</th>
+				<th>Статус</th>
+				<th>Управление</th>
+			</tr>
+<!-- /downloadsTop-->
