--- a/Remote/ru/login.htm
+++ b/Remote/ru/login.htm
@@ -1,56 +1,36 @@
-		<table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tab">Домой</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab">Поиск</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab">Загрузки</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab">Выгрузки</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab">Сети</td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
-					<div>
+﻿<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="inactive">Домой</li>
+				<li class="inactive">Поиск</li>
+				<li class="inactive">Загрузки</li>
+				<li class="inactive">Выгрузки</li>
+				<li class="inactive">Сети</li>
+			</ul>
+		</div>
+<!-- /tabs -->
+<!-- main body -->
+		<div class="poetry" id="frame">
+					<div class="padding left">
 						Приветствуем в <b>Shareaza Удаленный Доступ</b>.</b>
-						Если эта копия Shareaza запущена на Вашем компьютере - введите 
+						Если эта копия Shareaza запущена на Вашем компьютере - введите 
 						Ваше имя пользователя и пароль для Удаленного Доступа и нажмите <b>Войти</b>.
 					</div>
-					<%? failure %>
-					<div align="center" style="color: red; font-weight: bold;">
-						<br>
-						Имя ползователя и/или пароль неверны.
-						<br>
-						Попробуйте снова.
+					
+					<div class="poetry" style="color: red; font-weight: bold; height: 3em;">
+					<%? failure %>	Имя ползователя и/или пароль неверны.
+						Попробуйте снова.<%?%>
 					</div>
-					<%?%>
-					<form method="get">
+					
+					<div style="text-align: right; width: 24em; margin: 0 auto;">
+					<form method="get" action="">
 					<input type="hidden" name="submit" value="1">
-					<table align="center">
-						<tr>
-							<td>Имя ползователя:</td>
-							<td><input type="text" name="username" size="20"></td>
-						</tr>
-						<tr>
-							<td>Пароль:</td>
-							<td><input type="password" name="password" size="20" ID="Text1"></td>
-						</tr>
-						<tr>
-							<td colspan="2" align="center">
+						<label>Имя ползователя:</label>
+						<input type="text" name="username" size="20" /><br />
+						<label>Пароль:</label>
+						<input type="password" name="password" size="20" ID="Text1" /><br />
 								<input type="submit" value="Войти">
-							</td>
-						</tr>
-					</table>
 					</form>
-				</td>
-			</tr>
-		</table>
+					</div>
+	</div>
+<!-- /main body -->
