--- a/Remote/ru/networkHeader.htm
+++ b/Remote/ru/networkHeader.htm
@@ -1,25 +1,17 @@
-		<table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tab"><a class="tab" href="Home">Домой</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="search">Поиск</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="downloads">Загрузки</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="uploads">Выгрузки</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tabsel">Сети</td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
-					<p align="right" style="font-size: 7pt">
+﻿<!-- networkHeader -->
+		<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="inactive"><a href="home" class="noline">Домой</a></li>
+				<li class="inactive"><a href="search" class="noline">Поиск</a></li>
+				<li class="inactive"><a href="downloads" class="noline">Загрузки</a></li>
+				<li class="inactive"><a href="uploads" class="noline">Выгрузки</a></li>
+				<li class="active"><a href="network" class="noline">Сети</a></li>
+			</ul>
+		</div>
+		<!-- /tabs -->
+			<div id="frame">
+			<div id="functions">
 						<a href="?refresh=<%= random %>">Обновить</a>
-					</p>
+			</div>
+<!-- /networkHeader -->
