--- a/Remote/ru/networkNetStart.htm
+++ b/Remote/ru/networkNetStart.htm
@@ -1,24 +1,25 @@
-					<h4><%= network_caption %></h4>
+﻿					<h4><%= network_caption %></h4>
 <%? !network_connected %>
-					<p style="font-size: 7pt;">
-					Эта сеть <b>не</b> включена -
-					<a href="?connect=<%= network_id %>"><b>Соединиться с <%= network_caption %></b></a>
+					<p>
+					Эта сеть <strong>не</strong> включена -
+					<a href="?connect=<%= network_id %>"><strong>Соединиться с <%= network_caption %></strong></a>
 					</p>
 <%?%><%? network_connected %>
-					<p style="font-size: 7pt;">
+					<p>
 					Эта сеть включена -
-					<a href="?disconnect=<%= network_id %>"><b>Отключить <%= network_caption %></b></a>
+					<a href="?disconnect=<%= network_id %>"><strong>Отключить <%= network_caption %></strong></a>
 					</p>
-					<table width="100%" cellspacing="0" style="border-collapse: collapse;">
+				<div class="centertable">
+					<table>
 						<tr>
-							<td class="viewheader">Адрес</td>
-							<td class="viewheader" align="center">Время</td>
-							<td class="viewheader" align="center">Пакеты</td>
-							<td class="viewheader" align="center">Полоса пропускания</td>
-							<td class="viewheader" align="center">Всего</td>
-							<td class="viewheader" align="center">Режим</td>
-							<td class="viewheader" align="center">Ветвей</td>
-							<td class="viewheader">Юзер-Агент</td>
-							<td class="viewheader"></td>
+							<th>Адрес</th>
+							<th>Время</th>
+							<th>Пакеты</th>
+							<th>Полоса пропускания</th>
+							<th>Всего</th>
+							<th>Режим</th>
+							<th>Ветвей</th>
+							<th>Юзер-Агент</th>
+							<th></th>
 						</tr>
 <%?%>
