--- a/Remote/ru/searchNew.htm
+++ b/Remote/ru/searchNew.htm
@@ -1,37 +1,22 @@
-										<td class="tabsel">Новый поиск</td>
-										<td class="tabedg">&nbsp;</td>
-									</tr>
-								</table>
-							</td>
-						</tr>
-						<tr>
-							<td class="frame">
-								<div>
-									Чтобы начать поиск, введите искомое в 
-									поле ниже и нажмите <b>Начать поиск</b>.
-									Если нужно ограничить поиск типом файла - 
-									выберите его из списка.
-								</div>
-								<form method="get" action="newsearch">
-								<table align="center">
-									<tr>
-										<td>Искать:</td>
-										<td><input type="text" name="search" size="30"></td>
-									</tr>
-									<tr>
-										<td>Тип файла:</td>
-										<td>
-											<select name="schema">
-												<option value="">Любой тип файла</option>
-												<%= schema_option_list %>
-											</select>
-										</td>
-									</tr>
-									<tr/>
-									<tr>
-										<td colspan="2" align="center">
-											<input type="submit" value="Начать поиск">
-										</td>
-									</tr>
-								</table>
-								</form>
+﻿										<li class="active"><a class="noline" href="?id=0">Новый поиск</a></li>
+								</ul>
+<div style="border: 1px #000 solid;padding: 5px;">
+			<p>Чтобы начать поиск, введите искомое в поле ниже и нажмите <strong>Начать 
+				поиск</strong>. Если нужно ограничить поиск типом файла - 
+			выберите его из списка (рекомендуется).</p>
+	
+	<div style="text-align:right; width: 30em;">		
+		<form method="get" action="newsearch">
+
+			<label>Искать:</label>
+					<input type="text" name="search" class="regularinput" /><br />
+			<label>Тип файла:</label>
+					
+						<select name="schema" class="regularinput">
+							<option value="">Любой тип файла</option>
+							<%= schema_option_list %>
+						</select>
+				<br />
+						<input type="submit" value="Начать поиск">
+		</form>
+	</div>
