--- a/Remote/ru/searchTop.htm
+++ b/Remote/ru/searchTop.htm
@@ -1,28 +1,26 @@
-										<td class="tab"><a class="tab" href="?id=0">Новый поиск</a></td>
-										<td class="tabedg">&nbsp;</td>
-									</tr>
-								</table>
-							</td>
-						</tr>
-						<tr>
-							<td class="frame">
-								<table width="100%">
-									<tr>
-										<form method="get">
-											<input type="hidden" name="id" value="<%= search_id %>">
-											<input type="hidden" name="setfilter" value="1">
-											<td style="font-size: 7pt">Фильтр:</td>
-											<td><input type="text" name="filter" value="<%= search_filter %>" size="20"></td>
-											<td><input type="submit" value="Фильтровать"></td>
-											<td style="font-size: 7pt" align="right" width="100%">
-												<a href="?id=<%= search_id %>&refresh=<%= random %>">Обновить</a> -
+﻿
+<!-- searchTop -->
+										<li class="active"><a class="noline" href="?id=0">Новый поиск</a></li>
+								</ul>
+
+<div style="border: 1px #000 solid;padding: 5px;" id="content">
+	<div id="functions"><a href="?id=<%= search_id %>&amp;refresh=<%= random %>">Обновить</a> - 
 <%? searching %>
-												<a href="?id=<%= search_id %>&stop=1"><b>Остановить поиск</b></a> -
+												<a href="?id=<%= search_id %>&amp;stop=1"><b>Остановить поиск</b></a> -
 <%?%>
 												<a href="?close=<%= search_id %>">Закрыть поиск</a>
-											</td>
+	</div>
+		<div id="filters">
+										<form method="get" action="">
+											<input type="hidden" name="id" value="<%= search_id %>" />
+											<input type="hidden" name="setfilter" value="1" />
+											<label>Фильтр:</label>
+											<input type="text" name="filter" value="<%= search_filter %>" size="20" />
+											<input type="submit" value="Фильтровать" />
+
 										</form>
-									</tr>
-								</table>
-								<table width="100%" cellspacing="0" style="border-collapse: collapse">
-									<tr>
+		</div>
+										<br />
+<table>
+	<tr>
+<!--/searchTop-->
