--- a/Remote/ru/uploadsQueueEnd.htm
+++ b/Remote/ru/uploadsQueueEnd.htm
@@ -1,7 +1,9 @@
+<!-- uploadsQueueEnd -->
 <%? queue_expanded %>
 						<tr>
-							<td class="viewheader" colspan="6"></td>
+							<th colspan="6"></th>
 						</tr>
 					</table>
-					<br>
+				</div>
 <%?%>
+<!-- /uploadsQueueEnd -->
