--- a/Remote/en/home.htm
+++ b/Remote/en/home.htm
@@ -21,17 +21,19 @@
 					<input type="text" name="search" size="20">
 					<select name="schema">
 						<option value="">Any file</option>
-						<option value="http://www.limewire.com/schemas/audio.xsd">Audio</option>
-						<option value="http://www.limewire.com/schemas/video.xsd">Video</option>
 						<option value="http://www.shareaza.com/schemas/application.xsd">Application</option>
-						<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Source Code</option>
-						<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">Skin</option>
-						<option value="http://www.shareaza.com/schemas/image.xsd">Image</option>
+						<option value="http://www.limewire.com/schemas/audio.xsd">Audio</option>
+						<option value="http://www.shareaza.com/schemas/bittorent.xsd">BitTorrent</option>
 						<option value="http://www.limewire.com/schemas/book.xsd">Book</option>
-						<option value="http://www.shareaza.com/schemas/subtitle.xsd">Subtitle</option>
-						<option value="http://www.shareaza.com/schemas/rom.xsd">ROM Image</option>
-						<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">Spreadsheet</option>
+						<option value="http://www.shareaza.com/schemas/collection.xsd">Collection</option>
+						<option value="http://www.shareaza.com/schemas/image.xsd">Image</option>
 						<option value="http://www.shareaza.com/schemas/presentation.xsd">Presentation</option>
+						<option value="http://www.shareaza.com/schemas/rom.xsd">ROM Image</option>
+						<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">Skin</option>
+						<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Source Code</option>
+						<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">Spreadsheet</option>
+						<option value="http://www.shareaza.com/schemas/subtitle.xsd">Subtitle</option>
+						<option value="http://www.limewire.com/schemas/video.xsd">Video</option>
 						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Word Processing</option>
 					</select>
 					<input type="submit" value="Go">
