--- a/Remote/lt/home.htm
+++ b/Remote/lt/home.htm
@@ -21,18 +21,20 @@
 					<input type="text" name="search" size="20">
 					<select name="schema">
 						<option value="">Bet kokio tipo</option>
-						<option value="http://www.limewire.com/schemas/audio.xsd">Audio</option>
-						<option value="http://www.limewire.com/schemas/video.xsd">Video</option>
-						<option value="http://www.shareaza.com/schemas/application.xsd">Programa</option>
-						<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Pirminis kodas</option>
 						<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">Apvalkalas</option>
-						<option value="http://www.shareaza.com/schemas/image.xsd">Paveikslėlis</option>
+						<option value="http://www.limewire.com/schemas/audio.xsd">Audio</option>
+						<option value="http://www.shareaza.com/schemas/bittorent.xsd">BitTorrent</option>
+						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Dokumentas</option>
 						<option value="http://www.limewire.com/schemas/book.xsd">Knyga</option>
-						<option value="http://www.shareaza.com/schemas/subtitle.xsd">Subtitrai</option>
+						<option value="http://www.shareaza.com/schemas/presentation.xsd">Pateiktis</option>
+						<option value="http://www.shareaza.com/schemas/image.xsd">Paveikslėlis</option>
+						<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Pirminis kodas</option>
+						<option value="http://www.shareaza.com/schemas/application.xsd">Programa</option>
+						<option value="http://www.shareaza.com/schemas/collection.xsd">Rinkinys</option>
 						<option value="http://www.shareaza.com/schemas/rom.xsd">ROM atvaizdis</option>
 						<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">Skaičiuoklė</option>
-						<option value="http://www.shareaza.com/schemas/presentation.xsd">Pateiktis</option>
-						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Dokumentas</option>
+						<option value="http://www.shareaza.com/schemas/subtitle.xsd">Subtitrai</option>
+						<option value="http://www.limewire.com/schemas/video.xsd">Vaizdo įrašai</option>
 					</select>
 					<input type="submit" value="Pirmyn">
 				</form><br />
