Last fixes for the remote translation :)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6041 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/ru/login.htm
+++ b/Remote/ru/login.htm
@@ -12,7 +12,7 @@
 <!-- main body -->
 		<div class="poetry" id="frame">
 					<div class="padding left">
-						Приветствуем в <b>Shareaza Удаленный Доступ</b>.</b>
+						Приветствуем в <b>Shareaza Удаленный Доступ</b>.
 						Если эта копия Shareaza запущена на Вашем компьютере - введите 
 						Ваше имя пользователя и пароль для Удаленного Доступа и нажмите <b>Войти</b>.
 					</div>
