--- a/Remote/lt/login.htm
+++ b/Remote/lt/login.htm
@@ -7,6 +7,7 @@
 				<li class="inactive">Išsiuntimai</li>
 				<li class="inactive">Tinklai</li>
 			</ul>
+		</div>
 <!-- /tabs -->
 <!-- main body -->
 		<div class="poetry" id="frame">
